--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,9 @@
     <ImageView
         android:id="@+id/imageViewBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,10 +23,10 @@
 
         <ImageView
             android:id="@+id/imvFogata"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/campfire" />
+            android:layout_width="245dp"
+            android:layout_height="245dp"
+            android:layout_gravity="center" />
+            <!--app:srcCompat="@drawable/campfire_off" />-->
     </LinearLayout>
 
 
@@ -33,5 +35,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_percent="0.93" />
+
+    <ToggleButton
+        android:id="@+id/btnMute"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/ic_baseline_volume_off_24"
+        android:checked="true"
+        android:textOff="@string/vacio"
+        android:textOn="@string/vacio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
