--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,6 @@
             <!--app:srcCompat="@drawable/campfire_off" />-->
     </LinearLayout>
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
@@ -37,17 +36,16 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.93" />
 
-    <ToggleButton
+    <ImageButton
         android:id="@+id/btnMute"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/ic_baseline_volume_off_24"
-        android:checked="true"
-        android:textOff="@string/vacio"
-        android:textOn="@string/vacio"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_volume_off_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
